[package]
name = "gantry-crane"
version = "0.1.0"
edition = "2021"
description = "A Docker to MQTT bridge to integrate your containers with your home automation system. Comes with a Home Assistant integration built-in."
authors = ["philw07 <phil.w07@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/philw07/gantry-crane"
repository = "https://github.com/philw07/gantry-crane"
keywords = ["docker", "mqtt", "bridge", "home-assistant", "home-automation", "iot"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.66"
argh = "0.1.9"
bollard = "0.13.0"
env_logger = "0.9.3"
figment = { version = "0.10.8", features = ["env", "toml"] }
futures = "0.3.25"
log = "0.4.17"
paho-mqtt = "0.11.1"
serde = { version = "1.0.147", features = ["rc"] }
serde_json = "1.0.88"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"

[dev-dependencies]
temp-env = "0.3.1"

[profile.release]
strip = "symbols"
