[package]
name = "gantry-crane"
version = "0.2.1"
edition = "2021"
description = "A Docker to MQTT bridge to integrate your containers with your home automation system. Comes with a Home Assistant integration built-in."
authors = ["philw07 <phil.w07@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/philw07/gantry-crane"
repository = "https://github.com/philw07/gantry-crane"
keywords = ["docker", "mqtt", "bridge", "home-assistant", "home-automation", "iot"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.70"
argh = "0.1.10"
bollard = "0.14.0"
env_logger = "0.10.0"
figment = { version = "0.10.8", features = ["env", "toml"] }
futures = "0.3.27"
log = "0.4.17"
paho-mqtt = "0.12.1"
serde = { version = "1.0.159", features = ["rc"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"

[dev-dependencies]
temp-env = "0.3.3"

[profile.release]
strip = "symbols"
